Show progress bar in the GUI for downloads. Make download progress text less jumpy. Fix a race condition that could cause a rare crash.

--- a/shell/src/main/resources/net/plan99/graviton/graviton.css
+++ b/shell/src/main/resources/net/plan99/graviton/graviton.css
@@ -14,3 +14,14 @@
 .output-area .scroll-pane .content {
     -fx-background-color: transparent;
 }
+
+.progress-bar > .bar {
+    -fx-background-color: linear-gradient(
+            from 0px .75em to .75em 0px,
+            repeat,
+            -fx-accent 0%,
+            -fx-accent 49%,
+            derive(-fx-accent, 30%) 50%,
+            derive(-fx-accent, 30%) 99%
+    );
+}
